Update results with 4 total instances

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         },
         series: [
             {
-                // name: 'Local server (LUX)',
+                // name: 'Local server (LUX)(1)',
                 color: "blue",
                 type: 'line',
                 smooth: true,
@@ -69,21 +69,29 @@
                 connectNulls: true,
             },
             {
-                // name: 'Local server (LUX)',
+                // name: 'Local server (LUX)(2)',
+                color: "cyan",
+                type: 'line',
+                smooth: true,
+                seriesLayoutBy: 'row',
+                connectNulls: true,
+            },
+            {
+                // name: 'Remote server (FR)(1)',
                 color: "red",
                 type: 'line',
                 smooth: true,
                 seriesLayoutBy: 'row',
                 connectNulls: true,
-            }
-            // ,
-            // {
-            //     name: 'Remote server (FR)',
-            //     color: "blue",
-            //     data: remoteData,
-            //     type: 'line',
-            //     smooth: true
-            // }
+            },
+            {
+                // name: 'Remote server (FR)(2)',
+                color: "pink",
+                type: 'line',
+                smooth: true,
+                seriesLayoutBy: 'row',
+                connectNulls: true,
+            },
         ]
     };
 
