--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.0/dist/echarts.js"></script>
 
-<body>
-    <div id="main" style="width: 100%;height:80vh;"></div>
+<body style:="height:100%">
+    <div id="main" style="width: 100%;height:92%;"></div>
 </body>
 
 </html>
